mysql-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    name: mysql-service
    app: spring3hibernate-app
spec:
  #type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: spring3hibernate-app
    name: mysql-deployment
  clusterIP: None
