spring3hibernate-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring3hibernate-service
  labels:
    app: spring3hibernate-app
    name: spring3hibernate-service
spec:
  ports:
  - port: 9090
    protocol: TCP
  selector:
    app: spring3hibernate-app
    name: spring3hibernate-deployment
